// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Component disables the switch when disabled prop is true 1`] = `
[MockFunction] {
  "calls": [
    [
      true,
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Switch Component renders correctly with default props 1`] = `
<div>
  <label
    class="relative inline-flex items-center cursor-pointer  "
  >
    <input
      class="sr-only"
      type="checkbox"
    />
    <div
      class="
          w-10 h-5
          bg-gray-200
          rounded-full transition-colors duration-200 ease-in-out
        "
    >
      <div
        class="
            w-4 h-4
            translate-x-0
            bg-white rounded-full shadow-md transform transition-transform duration-200 ease-in-out
          "
      />
    </div>
  </label>
</div>
`;

exports[`Switch Component renders with different sizes 1`] = `
<div>
  <label
    class="relative inline-flex items-center cursor-pointer  "
  >
    <input
      class="sr-only"
      type="checkbox"
    />
    <div
      class="
          w-8 h-4
          bg-gray-200
          rounded-full transition-colors duration-200 ease-in-out
        "
    >
      <div
        class="
            w-3 h-3
            translate-x-0
            bg-white rounded-full shadow-md transform transition-transform duration-200 ease-in-out
          "
      />
    </div>
  </label>
</div>
`;

exports[`Switch Component renders with different sizes 2`] = `
<div>
  <label
    class="relative inline-flex items-center cursor-pointer  "
  >
    <input
      class="sr-only"
      type="checkbox"
    />
    <div
      class="
          w-10 h-5
          bg-gray-200
          rounded-full transition-colors duration-200 ease-in-out
        "
    >
      <div
        class="
            w-4 h-4
            translate-x-0
            bg-white rounded-full shadow-md transform transition-transform duration-200 ease-in-out
          "
      />
    </div>
  </label>
</div>
`;

exports[`Switch Component renders with different sizes 3`] = `
<div>
  <label
    class="relative inline-flex items-center cursor-pointer  "
  >
    <input
      class="sr-only"
      type="checkbox"
    />
    <div
      class="
          w-12 h-6
          bg-gray-200
          rounded-full transition-colors duration-200 ease-in-out
        "
    >
      <div
        class="
            w-5 h-5
            translate-x-0
            bg-white rounded-full shadow-md transform transition-transform duration-200 ease-in-out
          "
      />
    </div>
  </label>
</div>
`;

exports[`Switch Component supports aria-label for accessibility 1`] = `
<input
  aria-label="Toggle feature"
  class="sr-only"
  type="checkbox"
/>
`;
